// file: pkg/web/proto/responses/create_session_response.proto
// version: 1.1.0
// guid: 5b7bc14e-bb7d-4d0d-bd5b-c35bc5fb7bda

edition = "2023";

package gcommon.v1.web;

import "google/protobuf/go_features.proto";
import "pkg/web/proto/session_data.proto";
import "web/proto/session_data.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/web/proto";

// CreateSessionResponse response definition.
message CreateSessionResponse {
  // Newly created session details
  SessionData session = 1;
}
